; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_mem.c_CRYPTO_clear_realloc.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_mem.c_CRYPTO_clear_realloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @CRYPTO_clear_realloc(i8* %0, i64 %1, i64 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store i8* %0, i8** %7, align 8
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store i8* null, i8** %12, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %5
  %16 = load i64, i64* %9, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = load i32, i32* %11, align 4
  %19 = call i8* @CRYPTO_malloc(i64 %16, i8* %17, i32 %18)
  store i8* %19, i8** %6, align 8
  br label %61

20:                                               ; preds = %5
  %21 = load i64, i64* %9, align 8
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %20
  %24 = load i8*, i8** %7, align 8
  %25 = load i64, i64* %8, align 8
  %26 = load i8*, i8** %10, align 8
  %27 = load i32, i32* %11, align 4
  %28 = call i32 @CRYPTO_clear_free(i8* %24, i64 %25, i8* %26, i32 %27)
  store i8* null, i8** %6, align 8
  br label %61

29:                                               ; preds = %20
  %30 = load i64, i64* %9, align 8
  %31 = load i64, i64* %8, align 8
  %32 = icmp ult i64 %30, %31
  br i1 %32, label %33, label %42

33:                                               ; preds = %29
  %34 = load i8*, i8** %7, align 8
  %35 = load i64, i64* %9, align 8
  %36 = getelementptr inbounds i8, i8* %34, i64 %35
  %37 = load i64, i64* %8, align 8
  %38 = load i64, i64* %9, align 8
  %39 = sub i64 %37, %38
  %40 = call i32 @OPENSSL_cleanse(i8* %36, i64 %39)
  %41 = load i8*, i8** %7, align 8
  store i8* %41, i8** %6, align 8
  br label %61

42:                                               ; preds = %29
  %43 = load i64, i64* %9, align 8
  %44 = load i8*, i8** %10, align 8
  %45 = load i32, i32* %11, align 4
  %46 = call i8* @CRYPTO_malloc(i64 %43, i8* %44, i32 %45)
  store i8* %46, i8** %12, align 8
  %47 = load i8*, i8** %12, align 8
  %48 = icmp ne i8* %47, null
  br i1 %48, label %49, label %59

49:                                               ; preds = %42
  %50 = load i8*, i8** %12, align 8
  %51 = load i8*, i8** %7, align 8
  %52 = load i64, i64* %8, align 8
  %53 = call i32 @memcpy(i8* %50, i8* %51, i64 %52)
  %54 = load i8*, i8** %7, align 8
  %55 = load i64, i64* %8, align 8
  %56 = load i8*, i8** %10, align 8
  %57 = load i32, i32* %11, align 4
  %58 = call i32 @CRYPTO_clear_free(i8* %54, i64 %55, i8* %56, i32 %57)
  br label %59

59:                                               ; preds = %49, %42
  %60 = load i8*, i8** %12, align 8
  store i8* %60, i8** %6, align 8
  br label %61

61:                                               ; preds = %59, %33, %23, %15
  %62 = load i8*, i8** %6, align 8
  ret i8* %62
}

declare dso_local i8* @CRYPTO_malloc(i64, i8*, i32) #1

declare dso_local i32 @CRYPTO_clear_free(i8*, i64, i8*, i32) #1

declare dso_local i32 @OPENSSL_cleanse(i8*, i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
